force-app/main/default/objects/User/fields/ALK_Agente_Number__c.field-meta.xml
<CustomField>
    <fullName>ALK_Agente_Number__c</fullName>
    <label>Número de Agente</label>
    <length>10</length>
    <type>Text</type>
</CustomField>