force-app/main/default/objects/User/fields/ALK_Almacen__c.field-meta.xml
<CustomField>
    <fullName>ALK_Almacen__c</fullName>
    <label>Almacén</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALKOSTO VILLAVICENCIO</fullName>
            </value>
            <value>
                <fullName>ALKOSTO KR 30</fullName>
            </value>
            <value>
                <fullName>ALKOSTO 170</fullName>
            </value>
            <value>
                <fullName>ALKOSTO EDEN</fullName>
            </value>
            <value>
                <fullName>ALKOSTO 68</fullName>
            </value>
            <value>
                <fullName>ALKOSTO VENECIA</fullName>
            </value>
            <value>
                <fullName>ALKOSTO CALI</fullName>
            </value>
            <value>
                <fullName>ALKOSTO PEREIRA</fullName>
            </value>
            <value>
                <fullName>ALKOSTO BARRANQUILLA</fullName>
            </value>
            <value>
                <fullName>ALKOSTO FLORIDA BLANCA</fullName>
            </value>
            <value>
                <fullName>ALKOSTO SINCELEJO</fullName>
            </value>
            <value>
                <fullName>ALKOSTO YOPAL</fullName>
            </value>
            <value>
                <fullName>K-TRONIX 20 JULIO</fullName>
            </value>
            <value>
                <fullName>K-TRONIX AMERICAS</fullName>
            </value>
            <value>
                <fullName>K-TRONIX SALITRE</fullName>
            </value>
            <value>
                <fullName>K-TRONIX SUBA</fullName>
            </value>
            <value>
                <fullName>K-TRONIX UNICENTRO</fullName>
            </value>
            <value>
                <fullName>K-TRONIX TITAN</fullName>
            </value>
            <value>
                <fullName>K-TRONIX 94</fullName>
            </value>
            <value>
                <fullName>K-TRONIX CENTRO MAYOR</fullName>
            </value>
            <value>
                <fullName>K-TRONIX MOSQUERA</fullName>
            </value>
            <value>
                <fullName>K-TRONIX SOACHA</fullName>
            </value>
            <value>
                <fullName>K-TRONIX CHIA</fullName>
            </value>
            <value>
                <fullName>K-TRONIX FUSA</fullName>
            </value>
            <value>
                <fullName>K-TRONIX GIRARDOT</fullName>
            </value>
            <value>
                <fullName>K-TRONIX MANIZALES</fullName>
            </value>
            <value>
                <fullName>K-TRONIX VILLAVICENCIO</fullName>
            </value>
            <value>
                <fullName>K-TRONIX CALI</fullName>
            </value>
            <value>
                <fullName>K-TRONIX TUNJA</fullName>
            </value>
            <value>
                <fullName>K-TRONIX BUCARAMANGA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>