force-app/main/default/objects/User/fields/ALK_Function__c.field-meta.xml
<CustomField>
    <fullName>ALK_Function__c</fullName>
    <formula>IF ( NOT(ISNULL(ContactId)),  TEXT(Contact.ALK_Function__c), &quot; &quot; )</formula>
    <label>Función</label>
    <type>Text</type>
</CustomField>