force-app/main/default/objects/User/listViews/Administrador_Field_Service.listView-meta.xml
<ListView>
    <fullName>Administrador_Field_Service</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Administrador Field Service</value>
    </filters>
    <label>Administrador Field Service</label>
    <language>es</language>
</ListView>