force-app/main/default/objects/User/listViews/ALK_Internal_Users.listView-meta.xml
<ListView>
    <fullName>ALK_Internal_Users</fullName>
    <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5) AND 6 AND 7</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATED_BY_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Administrador Field Service</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Auxiliar Administrativo Interno</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Tecnico de campo VIP</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Gestión Posventa</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Creador de Casos</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>7/26/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_BY_NAME</field>
        <operation>contains</operation>
        <value>Raphaella</value>
    </filters>
    <label>Usuarios Internos Alk/Ktronix</label>
    <language>en_US</language>
</ListView>