force-app/main/default/objects/User/listViews/ALK_Partner_Coordinator.listView-meta.xml
<ListView>
    <fullName>ALK_Partner_Coordinator</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATED_BY_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Auxiliar Administrativo Aliado</value>
    </filters>
    <label>Coordinadores Aliados</label>
    <language>en_US</language>
</ListView>