force-app/main/default/objects/User/listViews/Auxiliares_administrativos_internos.listView-meta.xml
<ListView>
    <fullName>Auxiliares_administrativos_internos</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Auxiliar Administrativo Interno</value>
    </filters>
    <label>Auxiliares administrativos internos</label>
    <language>es</language>
</ListView>