force-app/main/default/objects/User/listViews/Coordinadores.listView-meta.xml
<ListView>
    <fullName>Coordinadores</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Coordinadores</value>
    </filters>
    <label>Coordinadores</label>
    <language>es</language>
</ListView>