force-app/main/default/objects/User/listViews/Creador_de_Casos.listView-meta.xml
<ListView>
    <fullName>Creador_de_Casos</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Creador de Casos</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>contains</operation>
        <value>(Emtelco)</value>
    </filters>
    <label>Creador de Experiencia</label>
    <language>es</language>
</ListView>