force-app/main/default/objects/User/listViews/Gestion_Posventa.listView-meta.xml
<ListView>
    <fullName>Gestion_Posventa</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Gestión Posventa</value>
    </filters>
    <label>Gestión Posventa</label>
    <language>es</language>
</ListView>