force-app/main/default/objects/User/listViews/Gestor_de_Casos.listView-meta.xml
<ListView>
    <fullName>Gestor_de_Casos</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Gestor de Casos</value>
    </filters>
    <label>Gestor de Casos</label>
    <language>es</language>
</ListView>