force-app/main/default/objects/User/listViews/T_cnico_de_Servicio.listView-meta.xml
<ListView>
    <fullName>T_cnico_de_Servicio</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>ALK_Agente_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Técnico de Servicio</value>
    </filters>
    <label>Técnico de Servicio</label>
    <language>es</language>
</ListView>